--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
          
         <h2> PROJECTS </h2>         		
         <a href= "projects/p1/index.html">Project 1: Interview</a>
+        <a href= "projects/p2/index.html">Project 2: Quilt</a>
+
 
  
     </body>
