--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         <h2> PROJECTS </h2>         		
         <a href= "projects/p1/index.html">Project 1: Interview</a>
         <a href= "projects/p2/index.html">Project 2: Quilt</a>
+        <a href= "https://marvelapp.com/e9ijc3">Project 3: Furniture mobile</a>
+        <a href= "https://marvelapp.com/h003da">Project 3: Furniture tablet</a>
+        <a href= "https://marvelapp.com/15a0bgi">Project 3: Furniture web</a>
+
+
 
 
  
