--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     	</h1>
 
 
+      <div id="container" > 
         <h2> EXERCISES </h2>
         <a href= "exercises/exercise1/index.html">Exercise 1</a>
         <a href= "exercises/exercise2/index.html">Exercise 2</a>
@@ -29,6 +30,7 @@
         <a href= "https://marvelapp.com/e9ijc3">Project 3: Furniture mobile</a>
         <a href= "https://marvelapp.com/h003da">Project 3: Furniture tablet</a>
         <a href= "https://marvelapp.com/15a0bgi">Project 3: Furniture web</a>
+    </div>
 
 
 
