--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <a href= "https://marvelapp.com/e9ijc3">Project 3: Furniture mobile</a>
         <a href= "https://marvelapp.com/h003da">Project 3: Furniture tablet</a>
         <a href= "https://marvelapp.com/15a0bgi">Project 3: Furniture web</a>
+         <a href= "projects/p4/project_4.html">Project 4: Concrete Poem</a>
     </div>
 
 
