--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
         <a href= "exercises/exercise2/index.html">Exercise 2</a>
         <a href= "exercises/exercise3/index.html">Exercise 3</a>
         <a href= "exercises/exercise4/index.html">Exercise 4</a>
+        <a href= "exercises/exercise5/index.html">Exercise 5</a>
+        <a href= "exercises/exercise6/index.html">Exercise 6</a>
+        <a href= "exercises/exercise7/index.html">Exercise 7</a>
+        <a href= "exercises/exercise8/index.html">Exercise 8</a>
+        <a href= "exercises/exercise9/index.html">Exercise 9</a>
+        <a href= "exercises/exercise10/index.html">Exercise 10</a>
+        <a href= "exercises/exercise11/index.html">Exercise 11</a>
+        <a href= "exercises/exercise12/index.html">Exercise 12</a>
+        <a href= "exercises/exercise13/index.html">Exercise 13</a>
+        <a href= "exercises/exercise14/index.html">Exercise 14+15</a>
+        
 
          
         <h2> PROJECTS </h2>         		
