--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <a href= "https://marvelapp.com/h003da">Project 3: Furniture tablet</a>
         <a href= "https://marvelapp.com/15a0bgi">Project 3: Furniture web</a>
          <a href= "projects/p4/project_4_revised.html">Project 4: Concrete Poem</a>
+         <a href= "projects/p4/project_4_revised.html">Project 5: Humorous Website</a>
     </div>
 
 
