--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
          <a href= "projects/p5/index.html">Project 5: Humorous Website</a>
     </div>
 
+     <div id="gif">
+  <iframe width="360" height="380" src="images/grimace.gif"></iframe>
+</div>
+
 
 
 
