--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 
      <div id="gif">
-  <iframe src="images/grimace.gif"></iframe>
+  <iframe width="260" height="300" src="images/grimace.gif"></iframe>
 </div>
 
 
